Deleted old .csv charts Updated style (reducing margin at top) Added position filter to index.html and js/stats.js

--- a/index.html
+++ b/index.html
@@ -57,39 +57,49 @@
   	</section>
   	<section id="filter-box">
   		<div class="span3">
-		<select id="Teams" value="ANA" class="span3" tabindex="1" name="teamlist">
-			<option value="ANA" selected="selected">Anaheim</option>
-			<option value="BOS">Boston</option>
-			<option value="BUF">Buffalo</option>
-			<option value="CGY">Calgary</option>
-			<option value="CAR">Carolina</option>
-			<option value="CHI">Chicago</option>
-			<option value="CBJ">Columbus</option>
-			<option value="COL">Colorado</option>
-			<option value="DAL">Dallas</option>
-			<option value="DET">Detroit</option>
-			<option value="EDM">Edmonton</option>
-			<option value="FLA">Florida</option>
-			<option value="LAK">Los Angeles</option>
-			<option value="MIN">Minnesota</option>
-			<option value="MTL">Montreal</option>
-			<option value="NSH">Nashville</option>
-			<option value="NJD">New Jersey</option>
-			<option value="NYI">New York Islanders</option>
-			<option value="NYR">New York Rangers</option>
-			<option value="OTT">Ottawa</option>
-			<option value="PHI">Philadelphia</option>
-			<option value="PHX">Phoenix</option>
-			<option value="PIT">Pittsburgh</option>
-			<option value="STL">St. Louis</option>
-			<option value="SJS">San Jose</option>
-			<option value="TBL">Tampa Bay</option>
-			<option value="TOR">Toronto</option>
-			<option value="VAN">Vancouver</option>
-			<option value="WSH">Washington</option>
-			<option value="WPG">Winnipeg</option>
-		</select>
+			<select id="Teams" value="ANA" class="span3" tabindex="1" name="teamlist">
+				<option value="ANA" selected="selected">Anaheim</option>
+				<option value="BOS">Boston</option>
+				<option value="BUF">Buffalo</option>
+				<option value="CGY">Calgary</option>
+				<option value="CAR">Carolina</option>
+				<option value="CHI">Chicago</option>
+				<option value="CBJ">Columbus</option>
+				<option value="COL">Colorado</option>
+				<option value="DAL">Dallas</option>
+				<option value="DET">Detroit</option>
+				<option value="EDM">Edmonton</option>
+				<option value="FLA">Florida</option>
+				<option value="LAK">Los Angeles</option>
+				<option value="MIN">Minnesota</option>
+				<option value="MTL">Montreal</option>
+				<option value="NSH">Nashville</option>
+				<option value="NJD">New Jersey</option>
+				<option value="NYI">New York Islanders</option>
+				<option value="NYR">New York Rangers</option>
+				<option value="OTT">Ottawa</option>
+				<option value="PHI">Philadelphia</option>
+				<option value="PHX">Phoenix</option>
+				<option value="PIT">Pittsburgh</option>
+				<option value="STL">St. Louis</option>
+				<option value="SJS">San Jose</option>
+				<option value="TBL">Tampa Bay</option>
+				<option value="TOR">Toronto</option>
+				<option value="VAN">Vancouver</option>
+				<option value="WSH">Washington</option>
+				<option value="WPG">Winnipeg</option>
+			</select>
   		</div>
+  		<div class="span3">
+			<select id="Pos" value="ALL" class="span3" tabindex="1" name="poslist">
+				<option value="ALL" selected="selected">All</option>
+				<option value="C">C</option>
+				<option value="LW">LW</option>
+				<option value="RW">RW</option>
+				<option value="D">D</option>
+			</select>
+  		</div>
+
 		<div class="span3">
           <a id="filter" href="#" class="btn btn-large btn-block">Display</a>
         </div>
@@ -108,7 +118,9 @@
 	  <div id="x-axis-label">Offensive zone starts %</div>
   </div>
   <footer>
+  	<section>
 	  This site uses the Flat UI, available free from <a href="http://designmodo.com" target="_blank">Designmodo</a>
+  	</section>
   </footer>
   <!-- JavaScript at the bottom for fast page loading -->
 
