Added "#!/usr/bin/python" for python script to run at dreamhost. Small css mod.

--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
   <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
   <header>
     <section id="description">
-  		<h3><a href="#" id="about">About Hockey Visualizer</a> | <a href="http://blog.hockeyvisualizer.com" target="_blank">Development Blog</a></h3>
+  		<h3><a href="#" id="about">About Hockey Visualizer</a></h3>
   		<div class="description-content">
   			<p><a href="#" class="close">Close this</a></p>
 	  		<p>I got the idea for this project when I first started seeing <a href="http://d3js.org/" target="_blank">D3</a>, a great javascript library for visualizing data, in action and it reminded me of charts I'd seen of advanced hockey stats.</p>
-	  		<p>This proof of concept uses a .csv file that I converted form an excel spreadsheet downloaded from <a href="http://www.hockeyabstract.com" target="_blank">Hockey Abstract</a>, so thanks are extended to Robert Vollman for compiling the stats.</p>
+	  		<p>The data is behind drawn from <a href="http://www.behindthenet.ca/nhl_statistics.php?c=0+1+3+5+4+6+7+8+13+14+29+30+32+33+34+45+46+63+67&ds=30&f5=">behind the net's player stats page</a></p>
 	  		<h3>About these visualizations</h3>
 	  		<p>These are just recreations of Robert Vollman's <a href="#" target="_blank">player usage charts</a>. The x-axis is Offensive zone start percent, the y-axis is Relative Quality of Competition, and the size of the bubbles reflect each player's relative Corsi. The redder the colour of the bubble the higher the RelC value bubble while lower values result in a yellow bubble. Pure red is 15 and above, pure yellow -15 and lower, and a value of 0 results in an orange bubble.</p>
 	  		<p>While these are just recreations, the ultimate purpose was to build a proof of concept for a larger tool that allows users to select from a number of different visualizations and, ultimately, to build customized visualizations by selecting their own data points.</p>
@@ -119,7 +119,8 @@
   </div>
   <footer>
   	<section>
-	  This site uses the Flat UI, available free from <a href="http://designmodo.com" target="_blank">Designmodo</a>
+	  This site uses the Flat UI, available free from <a href="http://designmodo.com" target="_blank">Designmodo</a> | 
+	  <a href="http://blog.hockeyvisualizer.com" target="_blank">Development Blog</a>
   	</section>
   </footer>
   <!-- JavaScript at the bottom for fast page loading -->
