Proper data joining, circles now animate and transition from team/position selection instead of recreating.

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 				<option value="DET">Detroit</option>
 				<option value="EDM">Edmonton</option>
 				<option value="FLA">Florida</option>
-				<option value="LAK">Los Angeles</option>
+				<option value="L.A">Los Angeles</option>
 				<option value="MIN">Minnesota</option>
 				<option value="MTL">Montreal</option>
 				<option value="NSH">Nashville</option>
-				<option value="NJD">New Jersey</option>
+				<option value="N.J">New Jersey</option>
 				<option value="NYI">New York Islanders</option>
 				<option value="NYR">New York Rangers</option>
 				<option value="OTT">Ottawa</option>
@@ -82,8 +82,8 @@
 				<option value="PHX">Phoenix</option>
 				<option value="PIT">Pittsburgh</option>
 				<option value="STL">St. Louis</option>
-				<option value="SJS">San Jose</option>
-				<option value="TBL">Tampa Bay</option>
+				<option value="S.J">San Jose</option>
+				<option value="T.B">Tampa Bay</option>
 				<option value="TOR">Toronto</option>
 				<option value="VAN">Vancouver</option>
 				<option value="WSH">Washington</option>
